--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<h1>Bill Newman</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>HTML Elements</title>
+  </head>
+  <body>
+    <h1>HTML Elements</h1>
+    <p>Clever content goes here</p>
+    <p>Clever content goes here</p>
+    <p>Clever content goes here</p>
+    <p>Clever content goes here</p>
+
+    <p>
+      <ul>
+        <li>Edge of Tomorrow</li>
+        <li>Rush Hour</li>
+        <li>Interstellar</li>
+      </ul>
+    </p>
+
+    <p>
+      <ol>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Kumquat</li>
+      </ol>
+    </p>
+
+    <p><img src="https://picsum.photos/200/300"></p>
+
+    <p>Pictures provided by <a href="https://picsum.photos/" target="_blank">Lorem Picsum</a></p>
+
+    <p>Here is how we use the <strong>strong</strong> tag.</p>
+    <p>Here is how we use the <em>em</em> tag.</p>
+    <p>Here is how we use the <strike>strike</strike> tag.</p>
+
+    <div>Here we are inside a div. <span style="background-color:yellow">Here we are inside a span.</span></div>
+
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Jane</td>
+        <td>Doe</td>
+        <td>jane@example.com</td>
+      </tr>
+    </table>
+    
+  </body>  
+</html>
+
+
+
+
