makes changes with style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <title>REPLIT HTML TEMPLATE</title>
+    <style>
+      html{
+        background-color: #ccc;
+      }
+
+      body {
+        font-family: Arial;
+        background-color: #fff;
+        max-width: 960px;
+      }
+    </style>
   </head>
   <body>
     <h1>REPLIT HTML TEMPLATE</h1>
