--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>REPLIT HTML TEMPLATE</title>
+  <title>Stylin with css</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <style>
@@ -83,7 +83,7 @@
 </head>
 
 <body>
-  <h1>REPLIT HTML TEMPLATE</h1>
+  <h1>Stylin with css</h1>
   <nav>
     <ul>
       <li><a href="#">Link 1</a></li>
